--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>IAESTEs internasjonale jobber</title>
+  <title>IAESTE Internships</title>
   <script src="main.js" type="text/javascript"></script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.js"></script>
